Lik editorconfig fp-uttak + sonarfix (#149)